--- a/index.html
+++ b/index.html
@@ -17,10 +17,42 @@
   <body>
     <div id="app">
       <main>
-        <div class="main-container"></div>
+        <div class="main-container">
+          <div class="back">
+            <img src="assets/icons/arrow-left-02.svg" alt="icone de voltar" />
+            <span>Voltar</span>
+          </div>
+
+          <h1>Formulário de matrícula</h1>
+          <p>
+            Preencha os dados abaixo para matricular seu filho na escola de
+            educação infantil Estrelas do Amanhã.
+          </p>
+
+          <form>
+            <fieldset class="child-info">
+              <legend>Informações da criança</legend>
+            </fieldset>
+          </form>
+        </div>
       </main>
+
       <aside>
-        <div class="aside-container"></div>
+        <div class="aside-container">
+          <header>
+            <img src="assets/icons/logo.svg" alt="logo estrelas do amanhã" />
+            <h2>Porque cada momento de <span>aprendizado</span> conta</h2>
+            <p>
+              Inscreva seu filho em nossa escola e veja-o florescer em um
+              ambiente acolhedor, seguro e estimulante.
+            </p>
+          </header>
+
+          <img
+            src="assets/Illustration.png"
+            alt="ilustração de uma professora em uma roda de alunos"
+          />
+        </div>
       </aside>
     </div>
   </body>
