--- a/index.html
+++ b/index.html
@@ -146,10 +146,15 @@
 
                 <div class="input-wrapper flex-1">
                   <label for="state">Estado</label>
-                  <input type="text" id="state" name="state" value="SP" disabled/>
+                  <input
+                    type="text"
+                    id="state"
+                    name="state"
+                    value="SP"
+                    disabled
+                  />
                 </div>
               </div>
-
             </fieldset>
 
             <fieldset class="gardian">
@@ -157,21 +162,56 @@
 
               <div class="input-wrapper">
                 <label for="gardian-name">Nome do responsável</label>
-                <input type="text" id="gardian-name" name="gardian-name">
-                <small>Principal responsável legal e contato de emergência</small>
+                <input type="text" id="gardian-name" name="gardian-name" />
+                <small
+                  >Principal responsável legal e contato de emergência</small
+                >
               </div>
 
               <div class="input-wrapper">
                 <label for="phone">Telefone</label>
-                <input type="tel" id="phone" name="phone" placeholder="(10) 9 8765-4321">
+                <input
+                  type="tel"
+                  id="phone"
+                  name="phone"
+                  placeholder="(10) 9 8765-4321"
+                />
               </div>
 
               <div class="input-wrapper">
                 <label for="mail">E-mail</label>
-                <input type="email" id="mail" name="mail" required>
+                <input type="email" id="mail" name="mail" required />
                 <div class="error">
-                  <img src="assets/icons/error.svg" alt="ícone de alerta vermelho">
+                  <img
+                    src="assets/icons/error.svg"
+                    alt="ícone de alerta vermelho"
+                  />
                   <span>Insira um e-mail válido!</span>
+                </div>
+              </div>
+            </fieldset>
+
+            <fieldset class="enroll-options">
+              <legend>Opções de Matrícula</legend>
+
+              <label>Selecione o turno de estudo</label>
+
+              <div class="radio-wrapper">
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" id="morning" name="study-shift" />
+                  <img
+                    src="assets/icons/arrow-down-01.svg"
+                    alt="ícone de nuvem"
+                  />
+                  <label for="morning">Manhã</label>
+                </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" id="evening" name="study-shift" />
+                  <img src="assets/icons/sun-02.svg" alt="ícone de sol" />
+                  <label for="evening">Manhã</label>
                 </div>
               </div>
             </fieldset>
