--- a/index.html
+++ b/index.html
@@ -194,26 +194,100 @@
             <fieldset class="enroll-options">
               <legend>Opções de Matrícula</legend>
 
-              <label>Selecione o turno de estudo</label>
+              <div class="input-wrapper">
+                <label>Selecione o turno de estudo</label>
 
-              <div class="radio-wrapper">
-                <div class="radio-inner">
-                  <div class="radio-image"></div>
-                  <input type="radio" id="morning" name="study-shift" />
-                  <img
-                    src="assets/icons/sun-cloud-02.svg"
-                    alt="ícone de nuvem"
-                  />
-                  <label for="morning">Manhã</label>
-                </div>
+                <div class="radio-wrapper">
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" id="morning" name="study-shift" />
+                    <img
+                      src="assets/icons/sun-cloud-02.svg"
+                      alt="ícone de nuvem"
+                    />
+                    <label for="morning">Manhã</label>
+                  </div>
 
-                <div class="radio-inner">
-                  <div class="radio-image"></div>
-                  <input type="radio" id="evening" name="study-shift" />
-                  <img src="assets/icons/sun-02.svg" alt="ícone de sol" />
-                  <label for="evening">Manhã</label>
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" id="evening" name="study-shift" />
+                    <img src="assets/icons/sun-02.svg" alt="ícone de sol" />
+                    <label for="evening">Manhã</label>
+                  </div>
                 </div>
               </div>
+
+              <div class="input-wrapper">
+                <label
+                  >Em qual esporte você gostaria de inscrever seu filho?</label
+                >
+
+                <div class="radio-wrapper">
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" id="football" name="sport" />
+                    <img
+                      src="assets/icons/football.svg"
+                      alt="ícone de uma bola de futebol"
+                    />
+                    <label for="football">Futebol</label>
+                  </div>
+
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" id="basketball" name="sport" />
+                    <img
+                      src="assets/icons/basketball-02.svg"
+                      alt="ícone de uma bola de basquete"
+                    />
+                    <label for="basketball">Basquete</label>
+                  </div>
+
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" id="swimming" name="sport" />
+                    <img
+                      src="assets/icons/swimming.svg"
+                      alt="ícone de uma pessoa nadando"
+                    />
+                    <label for="swimming">Natação</label>
+                  </div>
+
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" id="yoga" name="sport" />
+                    <img
+                      src="assets/icons/yoga-02.svg"
+                      alt="ícone de uma pessoa praticando yoga"
+                    />
+                    <label for="yoga">Yoga</label>
+                  </div>
+
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" id="volleyball" name="sport" />
+                    <img
+                      src="assets/icons/volleyball.svg"
+                      alt="ícone de uma bola de volei"
+                    />
+                    <label for="volleyball">Voleibol</label>
+                  </div>
+
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" id="boxe" name="sport" />
+                    <img
+                      src="assets/icons/boxing-glove-01.svg"
+                      alt="ícone de uma luva de boxe"
+                    />
+                    <label for="boxe">Natação</label>
+                  </div>
+                </div>
+              </div>
+            </fieldset>
+
+            <fieldset class="terms">
+              
             </fieldset>
           </form>
         </div>
